# FaceRec

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
FaceRec/: FaceRec.py
happy_face/: happy_face.py
