[metadata]
name = happy_face
version = 0.0.1
author = Rodrigo Herrera Itie
author_email = rheitie@gmail.com
description = Recognize and detect faces in an extremely easy way
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rodrigoherrerai/happy_face
classifiers = Programming Language :: Python :: 3
						License :: OSI Approved :: MIT License
						Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True
